# web

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  contenido.html  contenido_OLD.html  contenido_dinamico.js  file_server.c  file_serving_example_common.h  idf_component.yml  main.c  web_handler.c  web_handler.h  webtool.c  webtool.h
protocol_examples_common/: Kconfig.projbuild  wifi_connect.c
www-root/: contenido.html  contenido_dinamico.js  web_tool.js  webtool.js
